--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,10 +5,10 @@
 @import 'neat';
 @import 'mixins';
 
+
 /* ==========================================================================
    Perello i Associats Custom Styles
 ========================================================================== */ 
-
 
 html {
   font-size:100%;
@@ -93,7 +93,7 @@ nav ul li a:hover{
    Hero
    ========================================================================== */
 .hero h1{
-	@include opensans(400, 4.8em);
+	@include LC-italic(4.8em);
   text-align: center;
   padding-top: 70px;
 }
@@ -187,6 +187,17 @@ h3{
                 }
     // 
 }
+.contenidor-esquerra {
+  @include span-columns(6);
+  min-height: 500px;
+  background-color: yellow;
+}
+.contenidor-dreta {
+  @include span-columns(6);
+  min-height: 500px;
+  background-color: blue;
+}
+
 h2{
 	@include opensans(600, 3.6em);
 	margin: 60px auto 0 auto;
