--- a/css/main.css
+++ b/css/main.css
@@ -206,7 +206,8 @@ html {
    Perello i Associats Custom Styles
 ========================================================================== */
 html {
-  font-size: 100%; }
+  font-size: 100%;
+  background-color: #fcfcfc; }
 
 h1 {
   margin: 0;
@@ -295,7 +296,7 @@ nav ul li a:hover {
   background-color: #ffffff;
   opacity: 0.98;
   position: fixed;
-  z-index: 2; }
+  z-index: 99999; }
 
 /* ==========================================================================
    Hero
@@ -309,7 +310,7 @@ nav ul li a:hover {
   text-align: center;
   padding-top: 70px; }
 
-h3 {
+.hero h3 {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 400;
   font-size: 2em;
@@ -401,20 +402,22 @@ h3 {
    Particulars
    ========================================================================== */
 #particulars {
-  top-marging: 70px;
-  padding-bottom: 40px;
+  max-width: 800px;
+  margin: -50px auto auto auto;
+  border: 1px solid #f5f5f5;
   background-color: white; }
-  @media screen and (min-width: 48em) {
+  @media screen and (min-width: 64em) {
     #particulars {
-      padding-bottom: 70px; } }
+      max-width: 1280px; } }
 
 .contenidor-esquerra {
   float: left;
   display: block;
   margin-right: 0.1547101135%;
   width: 49.9226449433%;
-  min-height: 500px;
-  background-color: yellow; }
+  min-height: 830px;
+  background-color: white;
+  position: relative; }
   .contenidor-esquerra:last-child {
     margin-right: 0; }
 
@@ -423,8 +426,8 @@ h3 {
   display: block;
   margin-right: 0.1547101135%;
   width: 49.9226449433%;
-  min-height: 500px;
-  background-color: blue; }
+  min-height: 830px;
+  background-color: white; }
   .contenidor-dreta:last-child {
     margin-right: 0; }
 
@@ -436,7 +439,17 @@ h2 {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin: 60px auto 0 auto;
-  text-align: center; }
+  text-align: left; }
+
+h3 {
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 2em;
+  color: #2951a7;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: left;
+  margin: 1px 0 0 0; }
 
 h4 {
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -449,6 +462,18 @@ h4 {
   line-height: 30px;
   text-align: left;
   margin: 60px auto 0 auto; }
+
+h5 {
+  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-weight: 400;
+  font-size: 1.8em;
+  color: #999999;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  line-height: 30px;
+  text-align: left;
+  margin-top: 90px; }
 
 .llista {
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -467,39 +492,34 @@ ul {
 /* ==========================================================================
 Contenidors fotos + text
 ========================================================================== */
-.contenidor-foto-esquerra {
-  width: 50%;
-  min-height: 500px;
-  position: relative;
-  background-color: white;
-  float: left; }
+.marc-foto-1 {
+  width: 190px;
+  height: 365px;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  @media screen and (min-width: 64em) {
+    .marc-foto-1 {
+      width: 427px;
+      height: 630px; } }
 
-.contenidor-foto-dreta {
-  width: 50%;
-  min-height: 500px;
-  position: relative;
-  background-color: white;
-  float: left; }
+.forma1 {
+  width: 560px;
+  height: 560px;
+  border-radius: 50%;
+  background: #fafafa; }
 
-.contenidor-text-dreta {
-  width: 50%;
-  height: auto;
-  margin: 0 auto;
-  background-color: white;
-  float: right;
-  clear: right;
-  display: block;
-  position: relative; }
-
-.contenidor-text-esquerra {
-  width: 50%;
-  height: auto;
-  margin: 0 auto;
-  background-color: #fff;
-  float: left;
-  clear: right;
-  display: block;
-  position: relative; }
+.image1 {
+  z-index: 99; }
+  @media screen and (min-width: 64em) {
+    .image1 {
+      background-image: url(../img/particulars1_L.jpg); } }
+  @media only screen and (min-width: 64em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 64em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 64em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 64em) and (min-resolution: 192dpi), only screen and (min-width: 64em) and (min-resolution: 2dppx) {
+    .image1 {
+      background-image: url(../img/particulars1_L_@2x.jpg);
+      background-size: 100%; } }
 
 /* ==========================================================================
 Textos
