--- a/sass/main.scss
+++ b/sass/main.scss
@@ -179,7 +179,6 @@ nav ul li a:hover{
    Particulars
    ========================================================================== */
 #particulars{
-  max-width: 800px;
 	margin: -50px auto auto auto;
   border: 1px solid #f5f5f5;
   background-color: white;
@@ -188,25 +187,28 @@ nav ul li a:hover{
                 }
     // 
     @include media($l) {
-                max-width: 1280px;
+                // max-width: 1280px;
+                @include span-columns(11);
+                @include shift(.5);
                 }
     // 
 }
 .contenidor-esquerra{
   @include span-columns(6);
-  min-height: 830px;
+  min-height: 740px;
   background-color: white;
   position: relative;
 }
 .contenidor-dreta{
   @include span-columns(6);
-  min-height: 830px;
+  min-height: 740px;
   background-color: white;
 }
 
 h2{
 	@include opensans(600, 3.6em);
-	margin: 60px auto 0 auto;
+	margin: 0 auto;
+  line-height: 1;
   text-align: left;
 }
 h3{
@@ -222,23 +224,38 @@ h4{
   margin: 60px auto 0 auto;
 }
 h5{
-  @include opensans(400, 1.8em, #999999);
+  @include opensans(400, 1.4em, #999999);
   text-align: center;
-  line-height: 30px;
   text-align: left;
-  margin-top: 90px;
+  margin: 90px auto 0 auto;
 }
-
+.stroke-titol{
+  color: #f0f0f0;
+  width: 210px;
+  height: 1px;
+  margin: 15px auto 10px 0;
+  position: relative;
+}
+.serveis{
+  margin-top: 20px;
+  padding: 0;
+  list-style-type: none;
+  border: 1px solid #f5f5f5;
+  @include span-columns(5 of 6); 
+}
 .llista{
   @include opensans(400, 1.6em);
-  line-height: 28px;
+  line-height: 54px;
+  padding-left:10px;
+  border-bottom: 1px solid #f5f5f5;
 }
-ul{
-  margin-top: 20px;
-  padding-left: 10px; 
-  list-style-type: none;
-}
-
+// li{
+//   padding: 10px;
+//   border-bottom: 1px solid #f5f5f5;
+// }
+li:last-child{
+  border-bottom: none;
+} 
 /* ==========================================================================
 Contenidors fotos + text
 ========================================================================== */
@@ -299,15 +316,15 @@ Contenidors fotos + text
     // }
     @include media($l) {
       width: 427px;
-      height: 630px;
+      height: 545px;
 
     }
     //
 }
 //FORMA
 .forma1{
-  width: 560px;
-  height: 560px;
+  width: 520px;
+  height: 520px;
   border-radius: 50%;
   background: #fafafa;
 }
