--- a/css/main.css
+++ b/css/main.css
@@ -216,10 +216,21 @@ h1 {
 body {
   font-size: 10px; }
 
-.container {
+.menu-container {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto; }
+  .menu-container::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.container {
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #f5f5f5;
+  background-color: white; }
   .container::after {
     clear: both;
     content: "";
@@ -402,18 +413,11 @@ nav ul li a:hover {
    Particulars
    ========================================================================== */
 #particulars {
-  margin: -50px auto auto auto;
-  border: 1px solid #f5f5f5;
-  background-color: white; }
-  @media screen and (min-width: 64em) {
-    #particulars {
-      float: left;
-      display: block;
-      margin-right: 0.1547101135%;
-      width: 91.6537741572%;
-      margin-left: 4.1731129214%; }
-      #particulars:last-child {
-        margin-right: 0; } }
+  margin: -50px auto auto auto; }
+
+.blue-dash {
+  margin: 10px;
+  color: #2951a7; }
 
 .contenidor-esquerra {
   float: left;
@@ -506,15 +510,15 @@ h5 {
   color: #0a0a0a;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 54px;
-  padding-left: 10px;
+  line-height: 56px;
+  padding-left: 15px;
   border-bottom: 1px solid #f5f5f5; }
 
 li:last-child {
   border-bottom: none; }
 
 /* ==========================================================================
-Contenidors fotos + text
+Contenidors fotos
 ========================================================================== */
 .marc-foto-1 {
   width: 190px;
@@ -543,6 +547,41 @@ Contenidors fotos + text
   @media only screen and (min-width: 64em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 64em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 64em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 64em) and (min-resolution: 192dpi), only screen and (min-width: 64em) and (min-resolution: 2dppx) {
     .image1 {
       background-image: url(../img/particulars1_L_@2x.jpg);
+      background-size: 100%; } }
+
+/* ==========================================================================
+   Autonoms i Freelance
+   ========================================================================== */
+#autonoms {
+  margin: -1px auto auto auto; }
+
+/* ==========================================================================
+Contenidors fotos
+========================================================================== */
+.marc-foto-2 {
+  width: 427px;
+  height: 270px;
+  background-color: #2951a7; }
+  @media screen and (min-width: 64em) {
+    .marc-foto-2 {
+      width: 427px;
+      height: 270px;
+      margin: 100px auto; } }
+
+.forma2 {
+  width: 520px;
+  height: 520px;
+  border-radius: 50%;
+  background: #fafafa; }
+
+.image2 {
+  z-index: 99; }
+  @media screen and (min-width: 64em) {
+    .image2 {
+      background-image: url(../img/autonoms1_L.jpg); } }
+  @media only screen and (min-width: 64em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 64em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 64em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 64em) and (min-resolution: 192dpi), only screen and (min-width: 64em) and (min-resolution: 2dppx) {
+    .image2 {
+      background-image: url(../img/autonoms1_L_@2x.jpg);
       background-size: 100%; } }
 
 /* ==========================================================================
