--- a/sass/_grid-settings.scss
+++ b/sass/_grid-settings.scss
@@ -5,7 +5,7 @@
 // Change the grid settings
 
 // Si vols que es vegi la grid
-$visual-grid: false;
+$visual-grid: true;
 
 // parámateres de la grid
 $max-width: 1280px;
