--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,25 @@ html {
 *, *::after, *::before {
   box-sizing: inherit; }
 
+body:before {
+  background-image: -webkit-linear-gradient(left, transparent 0, #000 0, #000 8.1915157293%, transparent 8.1915157293%, transparent 8.3462258428%, #000 8.3462258428%, #000 16.5377415721%, transparent 16.5377415721%, transparent 16.6924516856%, #000 16.6924516856%, #000 24.8839674149%, transparent 24.8839674149%, transparent 25.0386775284%, #000 25.0386775284%, #000 33.2301932577%, transparent 33.2301932577%, transparent 33.3849033712%, #000 33.3849033712%, #000 41.5764191005%, transparent 41.5764191005%, transparent 41.731129214%, #000 41.731129214%, #000 49.9226449433%, transparent 49.9226449433%, transparent 50.0773550567%, #000 50.0773550567%, #000 58.268870786%, transparent 58.268870786%, transparent 58.4235808995%, #000 58.4235808995%, #000 66.6150966288%, transparent 66.6150966288%, transparent 66.7698067423%, #000 66.7698067423%, #000 74.9613224716%, transparent 74.9613224716%, transparent 75.1160325851%, #000 75.1160325851%, #000 83.3075483144%, transparent 83.3075483144%, transparent 83.4622584279%, #000 83.4622584279%, #000 91.6537741572%, transparent 91.6537741572%, transparent 91.8084842707%, #000 91.8084842707%, #000 100%, transparent 100%);
+  background-image: -moz-linear-gradient(left, transparent 0, #000 0, #000 8.1915157293%, transparent 8.1915157293%, transparent 8.3462258428%, #000 8.3462258428%, #000 16.5377415721%, transparent 16.5377415721%, transparent 16.6924516856%, #000 16.6924516856%, #000 24.8839674149%, transparent 24.8839674149%, transparent 25.0386775284%, #000 25.0386775284%, #000 33.2301932577%, transparent 33.2301932577%, transparent 33.3849033712%, #000 33.3849033712%, #000 41.5764191005%, transparent 41.5764191005%, transparent 41.731129214%, #000 41.731129214%, #000 49.9226449433%, transparent 49.9226449433%, transparent 50.0773550567%, #000 50.0773550567%, #000 58.268870786%, transparent 58.268870786%, transparent 58.4235808995%, #000 58.4235808995%, #000 66.6150966288%, transparent 66.6150966288%, transparent 66.7698067423%, #000 66.7698067423%, #000 74.9613224716%, transparent 74.9613224716%, transparent 75.1160325851%, #000 75.1160325851%, #000 83.3075483144%, transparent 83.3075483144%, transparent 83.4622584279%, #000 83.4622584279%, #000 91.6537741572%, transparent 91.6537741572%, transparent 91.8084842707%, #000 91.8084842707%, #000 100%, transparent 100%);
+  background-image: -ms-linear-gradient(left, transparent 0, #000 0, #000 8.1915157293%, transparent 8.1915157293%, transparent 8.3462258428%, #000 8.3462258428%, #000 16.5377415721%, transparent 16.5377415721%, transparent 16.6924516856%, #000 16.6924516856%, #000 24.8839674149%, transparent 24.8839674149%, transparent 25.0386775284%, #000 25.0386775284%, #000 33.2301932577%, transparent 33.2301932577%, transparent 33.3849033712%, #000 33.3849033712%, #000 41.5764191005%, transparent 41.5764191005%, transparent 41.731129214%, #000 41.731129214%, #000 49.9226449433%, transparent 49.9226449433%, transparent 50.0773550567%, #000 50.0773550567%, #000 58.268870786%, transparent 58.268870786%, transparent 58.4235808995%, #000 58.4235808995%, #000 66.6150966288%, transparent 66.6150966288%, transparent 66.7698067423%, #000 66.7698067423%, #000 74.9613224716%, transparent 74.9613224716%, transparent 75.1160325851%, #000 75.1160325851%, #000 83.3075483144%, transparent 83.3075483144%, transparent 83.4622584279%, #000 83.4622584279%, #000 91.6537741572%, transparent 91.6537741572%, transparent 91.8084842707%, #000 91.8084842707%, #000 100%, transparent 100%);
+  background-image: -o-linear-gradient(left, transparent 0, #000 0, #000 8.1915157293%, transparent 8.1915157293%, transparent 8.3462258428%, #000 8.3462258428%, #000 16.5377415721%, transparent 16.5377415721%, transparent 16.6924516856%, #000 16.6924516856%, #000 24.8839674149%, transparent 24.8839674149%, transparent 25.0386775284%, #000 25.0386775284%, #000 33.2301932577%, transparent 33.2301932577%, transparent 33.3849033712%, #000 33.3849033712%, #000 41.5764191005%, transparent 41.5764191005%, transparent 41.731129214%, #000 41.731129214%, #000 49.9226449433%, transparent 49.9226449433%, transparent 50.0773550567%, #000 50.0773550567%, #000 58.268870786%, transparent 58.268870786%, transparent 58.4235808995%, #000 58.4235808995%, #000 66.6150966288%, transparent 66.6150966288%, transparent 66.7698067423%, #000 66.7698067423%, #000 74.9613224716%, transparent 74.9613224716%, transparent 75.1160325851%, #000 75.1160325851%, #000 83.3075483144%, transparent 83.3075483144%, transparent 83.4622584279%, #000 83.4622584279%, #000 91.6537741572%, transparent 91.6537741572%, transparent 91.8084842707%, #000 91.8084842707%, #000 100%, transparent 100%);
+  background-image: linear-gradient(to left, transparent 0, #000 0, #000 8.1915157293%, transparent 8.1915157293%, transparent 8.3462258428%, #000 8.3462258428%, #000 16.5377415721%, transparent 16.5377415721%, transparent 16.6924516856%, #000 16.6924516856%, #000 24.8839674149%, transparent 24.8839674149%, transparent 25.0386775284%, #000 25.0386775284%, #000 33.2301932577%, transparent 33.2301932577%, transparent 33.3849033712%, #000 33.3849033712%, #000 41.5764191005%, transparent 41.5764191005%, transparent 41.731129214%, #000 41.731129214%, #000 49.9226449433%, transparent 49.9226449433%, transparent 50.0773550567%, #000 50.0773550567%, #000 58.268870786%, transparent 58.268870786%, transparent 58.4235808995%, #000 58.4235808995%, #000 66.6150966288%, transparent 66.6150966288%, transparent 66.7698067423%, #000 66.7698067423%, #000 74.9613224716%, transparent 74.9613224716%, transparent 75.1160325851%, #000 75.1160325851%, #000 83.3075483144%, transparent 83.3075483144%, transparent 83.4622584279%, #000 83.4622584279%, #000 91.6537741572%, transparent 91.6537741572%, transparent 91.8084842707%, #000 91.8084842707%, #000 100%, transparent 100%);
+  content: "";
+  display: inline-block;
+  height: 100%;
+  left: 0;
+  margin: 0 auto;
+  max-width: 1280px;
+  opacity: 0.1;
+  pointer-events: none;
+  position: fixed;
+  right: 0;
+  width: 100%;
+  z-index: 9999; }
+
 @fontface {
   font-family: 'LC-regular';
   src: url("../fonts/LibreCaslonText-Regular.ttf") format("truetype"); }
@@ -217,7 +236,7 @@ body {
   font-size: 10px; }
 
 .menu-container {
-  max-width: 1440px;
+  max-width: 1280px;
   margin-left: auto;
   margin-right: auto; }
   .menu-container::after {
@@ -226,7 +245,7 @@ body {
     display: table; }
 
 .container {
-  max-width: 1440px;
+  max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid #f5f5f5;
@@ -413,11 +432,14 @@ nav ul li a:hover {
    Particulars
    ========================================================================== */
 #particulars {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
   margin: -50px auto auto auto; }
-
-.blue-dash {
-  margin: 10px;
-  color: #2951a7; }
+  #particulars::after {
+    clear: both;
+    content: "";
+    display: table; }
 
 .contenidor-esquerra {
   float: left;
@@ -439,6 +461,10 @@ nav ul li a:hover {
   background-color: white; }
   .contenidor-dreta:last-child {
     margin-right: 0; }
+
+.blue-dash {
+  margin: 10px;
+  color: #2951a7; }
 
 h2 {
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -510,8 +536,9 @@ h5 {
   color: #0a0a0a;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 56px;
+  padding-top: 15px;
   padding-left: 15px;
+  padding-bottom: 15px;
   border-bottom: 1px solid #f5f5f5; }
 
 li:last-child {
@@ -520,6 +547,37 @@ li:last-child {
 /* ==========================================================================
 Contenidors fotos
 ========================================================================== */
+.marc-forma-1 {
+  width: 190px;
+  height: 100%;
+  margin: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+  @media screen and (min-width: 48em) {
+    .marc-forma-1 {
+      max-height: 420px;
+      float: left;
+      display: block;
+      margin-right: 0.3098996731%;
+      width: 83.2816833878%; }
+      .marc-forma-1:last-child {
+        margin-right: 0; } }
+  @media screen and (min-width: 64em) {
+    .marc-forma-1 {
+      max-height: 530px;
+      float: left;
+      display: block;
+      margin-right: 0.3098996731%;
+      width: 83.2816833878%; }
+      .marc-forma-1:last-child {
+        margin-right: 0; } }
+
+.forma1 {
+  border-radius: 50%;
+  background: #fafafa; }
+
 .marc-foto-1 {
   width: 190px;
   height: 365px;
@@ -528,32 +586,54 @@ Contenidors fotos
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); }
+  @media screen and (min-width: 48em) {
+    .marc-foto-1 {
+      float: left;
+      display: block;
+      margin-right: 0.3098996731%;
+      width: 66.5633667756%; }
+      .marc-foto-1:last-child {
+        margin-right: 0; } }
   @media screen and (min-width: 64em) {
     .marc-foto-1 {
-      width: 427px;
-      height: 545px; } }
-
-.forma1 {
-  width: 520px;
-  height: 520px;
-  border-radius: 50%;
-  background: #fafafa; }
+      height: 545px;
+      float: left;
+      display: block;
+      margin-right: 0.3098996731%;
+      width: 66.5633667756%; }
+      .marc-foto-1:last-child {
+        margin-right: 0; } }
 
 .image1 {
   z-index: 99; }
   @media screen and (min-width: 64em) {
     .image1 {
-      background-image: url(../img/particulars1_L.jpg); } }
+      background: url(../img/particulars1_L.jpg) center top; } }
   @media only screen and (min-width: 64em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 64em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 64em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 64em) and (min-resolution: 192dpi), only screen and (min-width: 64em) and (min-resolution: 2dppx) {
     .image1 {
       background-image: url(../img/particulars1_L_@2x.jpg);
-      background-size: 100%; } }
+      background-size: auto; } }
 
 /* ==========================================================================
    Autonoms i Freelance
    ========================================================================== */
 #autonoms {
+  max-width: 1280px;
+  margin-left: auto;
+  margin-right: auto;
   margin: -1px auto auto auto; }
+  #autonoms::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.text-esquerra {
+  float: left;
+  display: block;
+  margin-right: 0.3098996731%;
+  width: 83.2816833878%; }
+  .text-esquerra:last-child {
+    margin-right: 0; }
 
 /* ==========================================================================
 Contenidors fotos
