--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600,700);
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
   font-family: sans-serif;
@@ -204,7 +205,7 @@ body:before {
   height: 100%;
   left: 0;
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 1172px;
   opacity: 0.1;
   pointer-events: none;
   position: fixed;
@@ -212,15 +213,6 @@ body:before {
   width: 100%;
   z-index: 9999; }
 
-@fontface {
-  font-family: 'LC-regular';
-  src: url("../fonts/LibreCaslonText-Regular.ttf") format("truetype"); }
-@fontface {
-  font-family: 'LC-bold';
-  src: url("../fonts/LibreCaslonText-Bold.ttf") format("truetype"); }
-@fontface {
-  font-family: 'LC-italic';
-  src: url("../fonts/LibreCaslonText-Italic.ttf") format("truetype"); }
 /* ==========================================================================
    Perello i Associats Custom Styles
 ========================================================================== */
@@ -236,7 +228,7 @@ body {
   font-size: 10px; }
 
 .menu-container {
-  max-width: 1280px;
+  max-width: 1172px;
   margin-left: auto;
   margin-right: auto; }
   .menu-container::after {
@@ -245,7 +237,7 @@ body {
     display: table; }
 
 .container {
-  max-width: 1280px;
+  max-width: 1172px;
   margin-left: auto;
   margin-right: auto;
   border: 1px solid #f5f5f5;
@@ -258,6 +250,30 @@ body {
 .full-width {
   width: 100%; }
 
+.contenidor-esquerra {
+  float: left;
+  display: block;
+  margin-right: 0.1547101135%;
+  width: 49.9226449433%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  min-height: 660px;
+  background-color: gray;
+  position: relative; }
+  .contenidor-esquerra:last-child {
+    margin-right: 0; }
+
+.contenidor-dreta {
+  float: left;
+  display: block;
+  margin-right: 0.1547101135%;
+  width: 49.9226449433%;
+  padding-top: 50px;
+  min-height: 700px;
+  background-color: red; }
+  .contenidor-dreta:last-child {
+    margin-right: 0; }
+
 /* ==========================================================================
    Menu Principal
    ========================================================================== */
@@ -269,17 +285,17 @@ body {
   padding: 0; }
 
 .logo img {
-  margin-left: 20px;
+  height: 50px;
   float: left; }
 
 #lletres-logo {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: 'Source Serif Pro', serif;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 1.8em;
   color: #0a0a0a;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  line-height: 67px;
+  line-height: 50px;
   margin: 0 auto 0 5px;
   padding: 0;
   float: left; }
@@ -294,33 +310,28 @@ nav ul li {
   display: inline-block; }
 
 nav ul li a {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: 1.6em;
+  font-family: 'Source Serif Pro', serif;
+  font-weight: 700;
+  font-size: 1.5em;
   color: #0a0a0a;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-decoration: none;
-  line-height: 67px; }
+  line-height: 50px; }
 
 nav ul li a:hover {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: 1.6em;
+  font-family: 'Source Serif Pro', serif;
+  font-weight: 700;
+  font-size: 1.5em;
   color: #2951a7;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: none;
-  line-height: 67px;
-  border-bottom: 2px solid #2951a7; }
-
-#entitats_socials_link {
-  margin-right: 20px; }
+  text-decoration: none; }
 
 .top-bar {
   margin: 0;
   width: 100%;
-  height: 70px;
+  height: 50px;
   border-top: 2px solid #2951a7;
   border-bottom: 1px solid #eeeeee;
   background-color: #ffffff;
@@ -332,40 +343,24 @@ nav ul li a:hover {
    Hero
    ========================================================================== */
 .hero h1 {
-  font-family: 'LC-italic', serif;
+  font-family: 'Source Serif Pro', serif;
+  font-weight: 700;
   font-size: 4.8em;
-  color: #0a0a0a;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  padding-top: 70px; }
+  padding-top: 65px; }
 
 .hero h3 {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: 'Source Serif Pro', serif;
   font-weight: 400;
-  font-size: 2em;
+  font-size: 2.4em;
   color: #2951a7;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   margin: 1px 0 0 0; }
-
-.hero a {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: 2em;
-  color: #2951a7;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  line-height: 30px;
-  text-align: center;
-  text-decoration: none;
-  display: block;
-  width: 126px;
-  border: 2px solid #2951a7;
-  border-radius: 2px;
-  margin: 20px auto 0 auto;
-  padding-top: 12px; }
 
 .stroke {
   color: #f0f0f0;
@@ -375,21 +370,24 @@ nav ul li a:hover {
   position: relative; }
 
 .cta {
+  height: 50px;
+  background-color: #2951a7;
+  max-width: 200px; }
+
+.hero a {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-weight: 600;
   font-size: 2em;
-  color: #2951a7;
+  color: #ffffff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-decoration: none;
+  line-height: 50px;
   text-align: center;
-  background-color: white;
-  padding: 0 10pt 10pt 10pt;
-  border: #2951a7 solid 2px;
-  max-width: 200px;
+  text-decoration: none;
   display: block;
-  margin: 0 auto;
-  position: relative; }
+  width: 126px;
+  border-radius: 2px;
+  margin: 40px auto 0 auto; }
 
 /* Sweep To Right de blanc a blau*/
 .hvr-sweep-to-right {
@@ -425,67 +423,52 @@ nav ul li a:hover {
   background: #fcfcfc url("../img/hero-bg-desktop.jpg") center bottom no-repeat;
   height: 90vh;
   max-height: 690px;
-  border-bottom: 1px solid #eeeeee;
-  padding-top: 70px; }
+  padding-top: 50px; }
+
+.serveis-clients {
+  max-width: 1172px;
+  margin-left: auto;
+  margin-right: auto; }
+  .serveis-clients::after {
+    clear: both;
+    content: "";
+    display: table; }
 
 /* ==========================================================================
    Particulars
    ========================================================================== */
 #particulars {
-  max-width: 1280px;
+  max-width: 1172px;
   margin-left: auto;
   margin-right: auto;
-  margin: -50px auto auto auto; }
+  margin: -50px auto auto auto;
+  background-color: white;
+  border: 1px solid #f2f2f2; }
   #particulars::after {
     clear: both;
     content: "";
     display: table; }
 
-.contenidor-esquerra {
-  float: left;
-  display: block;
-  margin-right: 0.1547101135%;
-  width: 49.9226449433%;
-  min-height: 740px;
-  background-color: white;
-  position: relative; }
-  .contenidor-esquerra:last-child {
-    margin-right: 0; }
-
-.contenidor-dreta {
-  float: left;
-  display: block;
-  margin-right: 0.1547101135%;
-  width: 49.9226449433%;
-  min-height: 740px;
-  background-color: white; }
-  .contenidor-dreta:last-child {
-    margin-right: 0; }
-
-.blue-dash {
-  margin: 10px;
-  color: #2951a7; }
-
 h2 {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-weight: 600;
-  font-size: 3.6em;
-  color: #0a0a0a;
+  font-family: 'Source Serif Pro', serif;
+  font-weight: 700;
+  font-size: 3.8em;
+  color: #333333;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0 auto;
-  line-height: 1;
-  text-align: left; }
+  margin: 0;
+  text-align: left;
+  margin: 0 auto; }
 
 h3 {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: 'Source Serif Pro', serif;
   font-weight: 400;
   font-size: 2em;
   color: #2951a7;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: left;
-  margin: 1px 0 0 0; }
+  margin: 14px auto; }
 
 h4 {
   font-family: 'Open Sans', Helvetica, sans-serif;
@@ -495,27 +478,23 @@ h4 {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
-  line-height: 30px;
   text-align: left;
-  margin: 60px auto 0 auto; }
+  margin: 0 auto; }
 
 h5 {
-  font-family: 'Open Sans', Helvetica, sans-serif;
+  font-family: 'Source Serif Pro', serif;
   font-weight: 400;
-  font-size: 1.4em;
+  font-size: 1.6em;
   color: #999999;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  text-align: center;
   text-align: left;
-  margin: 90px auto 0 auto; }
+  margin: 0 auto; }
 
-.stroke-titol {
-  color: #f0f0f0;
-  width: 210px;
-  height: 1px;
-  margin: 15px auto 10px 0;
-  position: relative; }
+#particulars .stroke-titol {
+  width: 195px;
+  margin-top: 4px;
+  border-bottom: 2px solid #f5f5f5; }
 
 .serveis {
   margin-top: 20px;
@@ -525,7 +504,7 @@ h5 {
   float: left;
   display: block;
   margin-right: 0.3098996731%;
-  width: 83.2816833878%; }
+  width: 91.6408416939%; }
   .serveis:last-child {
     margin-right: 0; }
 
@@ -540,6 +519,11 @@ h5 {
   padding-left: 15px;
   padding-bottom: 15px;
   border-bottom: 1px solid #f5f5f5; }
+
+.blue-dash {
+  margin-left: 1%;
+  margin-right: 2%;
+  color: #2951a7; }
 
 li:last-child {
   border-bottom: none; }
@@ -612,28 +596,30 @@ Contenidors fotos
   @media only screen and (min-width: 64em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 64em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 64em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 64em) and (min-resolution: 192dpi), only screen and (min-width: 64em) and (min-resolution: 2dppx) {
     .image1 {
       background-image: url(../img/particulars1_L_@2x.jpg);
-      background-size: auto; } }
+      background-size: 100%; } }
 
 /* ==========================================================================
    Autonoms i Freelance
    ========================================================================== */
 #autonoms {
-  max-width: 1280px;
+  max-width: 1172px;
   margin-left: auto;
   margin-right: auto;
-  margin: -1px auto auto auto; }
+  margin: -1px auto auto auto;
+  background-color: white;
+  border: 1px solid #f2f2f2; }
   #autonoms::after {
     clear: both;
     content: "";
     display: table; }
 
-.text-esquerra {
-  float: left;
-  display: block;
-  margin-right: 0.3098996731%;
-  width: 83.2816833878%; }
-  .text-esquerra:last-child {
-    margin-right: 0; }
+.esquerra {
+  margin-left: 8.3591583061%; }
+
+#autonoms .stroke-titol {
+  width: 390px;
+  margin-top: 4px;
+  border-bottom: 2px solid #f5f5f5; }
 
 /* ==========================================================================
 Contenidors fotos
