--- a/sass/_grid-settings.scss
+++ b/sass/_grid-settings.scss
@@ -8,11 +8,11 @@
 $visual-grid: true;
 
 // parámateres de la grid
-$max-width: 1280px;
+$max-width: 1172px;
 $grid-columns: 12;
 $gutter: 0.08em;
 
-// com vols que es motri el preview de la grid
+// com vols que es mostri el preview de la grid
 $visual-grid-index: front;
 $visual-grid-color: #000;
 $visual-grid-opacity: .1;
