--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -2,7 +2,7 @@
 // mixins
 
 //Max Width
-$max-width: 1280px;
+$max-width: 1172px;
 
 // Breakpoints
 $bp-medium: 48em; // 768px
@@ -42,18 +42,6 @@ $xxl: min-width $bp-xxlarge;
 	
 // }
 
-@fontface{
-  font-family:'LC-regular';
-  src: url('../fonts/LibreCaslonText-Regular.ttf') format('truetype');
-}
-@fontface{
-  font-family:'LC-bold';
-  src: url('../fonts/LibreCaslonText-Bold.ttf') format('truetype');
-}
-@fontface{
-  font-family:'LC-italic';
-  src: url('../fonts/LibreCaslonText-Italic.ttf') format('truetype');
-}
 
 
 @mixin smoothy{
@@ -68,31 +56,15 @@ $xxl: min-width $bp-xxlarge;
  color:$color;
  @include smoothy;
 }
-@mixin LC-regular($size, $color:#0a0a0a) {
- font-family: 'LC-regular', serif; 
- font-size: $size; 
- color:$color;
- @include smoothy;
-}
-@mixin LC-bold($size, $color:#0a0a0a) {
- font-family: 'LC-bold', serif; 
- font-size: $size; 
- color:$color;
- @include smoothy;
-}
-@mixin LC-italic($size, $color:#0a0a0a) {
- font-family: 'LC-italic', serif; 
+@mixin SerifPro($weight, $size, $color:#333333) {
+ font-family: 'Source Serif Pro', serif;  
+ font-weight: $weight; 
  font-size: $size; 
  color:$color;
  @include smoothy;
 }
 
 
-// @mixin LC($type, $size) {
-//  font-family: 'LC-#{$type}', Times, serif; 
-//  font-size: $size; 
-//  @include smoothy;
-// }
 
 @mixin border-box{
     box-sizing: border-box;
